Add Hủaıbaı to projects

--- a/projects/index.html
+++ b/projects/index.html
@@ -5,6 +5,7 @@ title: Projects
 <ul>
   <li><a href="https://github.com/toaq/toadua-android">Toadua for Android</a>, a collaborative Toaq dictionary app</li>
   <li><a href="majipoq">Májıpoq roı Rúaı Ỉoma</a>, an ongoing Toaq translation of Mage &amp; Demon Queen</li>
+  <li><a href="https://github.com/toaq/huaibai">Hủaıbaı</a>, a Toaq translation of Minecraft</li>
   <li><a href="https://gitlab.com/robintown/airlock">Airlock</a>, a Matrix space invite bot</li>
   <li><a href="https://gitlab.com/robintown/mx-puppet-groupme">mx-puppet-groupme</a>, a bridge between the GroupMe and Matrix networks</li>
 </ul>
