Link to Májıpoq 1.17

--- a/projects/majipoq/index.html
+++ b/projects/majipoq/index.html
@@ -21,4 +21,5 @@ title: Májıpoq roı Rúaı Ỉoma
   <li><a href="1.14">Kó hẻı jỏ pảq</a></li>
   <li><a href="1.15">Kó hẻı fẻ pảq</a></li>
   <li><a href="1.16">Kó hẻı cỉ pảq</a></li>
+  <li><a href="1.17">Kó hẻı dỉaı pảq</a></li>
 </ul>
