--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@ title: Robin's home
 <ul>
   <li>GitHub: <a href="https://github.com/robintown">@robintown</a></li>
   <li>GitLab: <a href="https://gitlab.com/robintown">@robintown</a></li>
-  <li>Matrix: <a href="https://matrix.to/#/@robintown:townsendandsmith.ml">@robintown:townsendandsmith.ml</a></li>
+  <li>Matrix: <a href="https://matrix.to/#/@robin:robin.town">@robin:robin.town</a></li>
   <li>Discord: robintown#5823</li>
   <li>Email: robin @ this domain</li>
 </ul>
